# nedlia-back-end

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  config.py  docker-compose.dev.yml  docker-compose.yml  load-test.yml  main.py  pr_review.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  sonar-project.properties  test_main.py
.github/workflows/: build.yml
app/: __main__.py  main.py
app/api/v1/: api.py  router.py
app/api/v1/endpoints/: features.py  health.py  root.py
app/core/: config.py  events.py  feature_flags.py
app/domain/entities/: base.py
app/domain/interfaces/: repository_base.py
app/domain/services/: base_service.py
app/infrastructure/database/: connection.py
app/services/: feature_service.py
config/: __init__.py
nedlia-back-end/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
nedlia-back-end/app/application/dtos/: user.py
nedlia-back-end/app/application/services/: user_service.py
nedlia-back-end/app/domain/entities/: base.py  user.py
nedlia-back-end/app/domain/exceptions/: base.py
nedlia-back-end/app/domain/repositories/: base.py  user.py
nedlia-back-end/app/domain/value_objects/: base.py  common.py
nedlia-back-end/app/infrastructure/auth/: okta_client.py
nedlia-back-end/app/infrastructure/config/: settings.py
nedlia-back-end/app/infrastructure/errors/: handlers.py
nedlia-back-end/app/infrastructure/logging/: config.py
nedlia-back-end/app/infrastructure/middleware/: auth.py  logging.py  metrics.py
nedlia-back-end/app/infrastructure/persistence/: database.py
nedlia-back-end/app/infrastructure/persistence/models/: base.py  user.py
nedlia-back-end/app/infrastructure/persistence/repositories/: user.py
nedlia-back-end/app/presentation/api/v1/: main.py
nedlia-back-end/app/presentation/api/v1/routes/: __init__.py  health.py  users.py  webhooks.py
nedlia-back-end/docs/: design-diagrams.md  implementation.md  okta-integration.md
nedlia-back-end/migrations/: env.py
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: start.sh
tests/: conftest.py  test__main__.py  test_main.py
tests/api/v1/: test_features.py  test_health.py  test_root.py
tests/services/: test_feature.py
