[tool.poetry]
name = "nedlia-back-end"
version = "0.1.0"
description = "Nedlia Backend API with Clean Architecture"
authors = ["Lavrenti DeLavrenti <one.lasha@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.13.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
hypercorn = "^0.16.0"
growthbook = "^1.1.0"
cachetools = "^5.3.2"
motor = "^3.3.2"
pymongo = "^4.6.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pylint = "^3.3.4"
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"
bandit = "^1.7.7"
mypy = "^1.8.0"
types-requests = "^2.31.0"
types-PyYAML = "^6.0.12"
types-python-jose = "^3.3.4"
types-passlib = "^1.7.7"
types-cachetools = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=app --cov-report=xml --cov-report=term-missing --cov-fail-under=10"

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "motor.*",
    "growthbook.*",
    "fastapi.*",
    "pydantic_settings.*",
    "pymongo.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["pytest.*"]
ignore_missing_imports = true
